Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-31767

Couchstore-Add log messages to provide state of the system when a corruption is detected.

    XMLWordPrintable

Details

    Description

      When a corruption is detected on an index node, log relevant information that can be used in the analysis of the problem.

      For example, the checksum, the length information in the header. The file offset where corruption was detected, the current size of the file and even a redacted hex dump of the buffer. The snappy failures if any must be logged also. Log some uncommon code paths, for example log when the size of the compressed buffer is bigger than the original buffer.

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ritesh.agarwal Ritesh Agarwal
              srinath.duvuru Srinath Duvuru
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty