src/util.h
@@ -79,6 +79,8 @@ cs_off_t align_to_next_block(cs_off_t offset);
         if((C) != 0) { error_pass(E); } \
     } while (0)
 
+    couchstore_error_t log_last_internal_error(const char *format, ...) CB_FORMAT_PRINTF(1, 2);
+
 #ifdef __cplusplus
 }
 #endif
